--- a/empowermental.html
+++ b/empowermental.html
@@ -74,56 +74,25 @@
             overflow: hidden;
         }
 
-        /* Navbar Styles */
-        .nav-bar-sticky {
-            position: sticky;
-            top: 0;
-            background-color: #333;
-            padding: 10px;
-            z-index: 100;
-        }
-
-        .nav-bar-sticky h2 {
-            color: white;
-            margin: 0;
-            font-size: 1.5rem;
-        }
-
-        .nav-bar-sticky ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-        }
-
-        .nav-bar-sticky ul li {
-            margin: 0 15px;
-        }
-
-        .nav-bar-sticky ul li a {
-            color: white;
-            text-decoration: none;
-            font-size: 1.1rem;
-        }
-
-        .nav-bar-sticky ul li a:hover {
-            text-decoration: underline;
-        }
     </style>
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav class="nav-bar-sticky">
-        <h2><a href="index.html">Aditya Barve</a></h2>
-        <ul>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#">Contact Me</a></li>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+    <h2 class="navbar-brand"><a href="index.html" class="text-white">Aditya Barve</a></h2>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="index.html#skills">Skills</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html#education">Education</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html#projects">Projects</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact Me</a></li>
         </ul>
-    </nav>
+    </div>
+</nav>
 <br><br>
     <div class="container">
         <!-- Full-size Image Modal -->
