--- a/index.html
+++ b/index.html
@@ -127,12 +127,13 @@
             <h2 class="pro-txt" style="color: white;">Projects</h2>
             <div class="row">
                 <div class="col-sm-4 pro-sec-sep">
-                    <h4>Online Ad’s Free Entertainment Platform (B.E Final Year Project):</h4>
+                    <h4>Library Management System (Spring Boot REST):</h4>
                     <ul>
-                        <li>Created an Advertisement free YouTube like online video viewing and entertainment platform.
-                        </li>
-                        <li>This enhanced user experience and has videos ads free.</li>
-                        <li>It can be summarized as a webapp just like YouTube but content here is Ads Free.</li>
+                        <li>Built a REST API-based Library Management System using Spring Boot, enabling efficient data operations.</li>
+                        <li>Implemented core components (Controllers, Services, Repositories) with modular architecture for maintainability.</li>
+                        <li>Streamlined operations for user registration, book transactions, availability tracking, and returns, improving resource management.</li>
+                        <li>Utilized Spring Data JPA for seamless database interactions, achieving fast and reliable data access.</li>
+                        <li>Delivered a scalable solution to effectively manage library resources and transactions.</li>
                     </ul>
                 </div>
                 <div class="col-sm-4 pro-sec-sep">
@@ -168,6 +169,23 @@
                             blogs.</li>
                         <li>Meanwhile, visitors are treated to an engaging array of content, accessing a diverse
                             collection of user-generated posts that captivate and inspire.</li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 pro-sec-sep">
+                    <h4>Online Ad’s Free Entertainment Platform (B.E Final Year Project):</h4>
+                    <ul>
+                        <li>Created an Advertisement free YouTube like online video viewing and entertainment platform.
+                        </li>
+                        <li>This enhanced user experience and has videos ads free.</li>
+                        <li>It can be summarized as a webapp just like YouTube but content here is Ads Free.</li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 pro-sec-sep">
+                    <h4>Culinary Destination: Online Food Ordering Website (PHP):</h4>
+                    <ul>
+                        <li>Built a dynamic food ordering platform with cart and admin management features.</li>
+                        <li>Enhanced customer satisfaction with real-time WhatsApp order tracking.</li>
+                        <li><b>Technologies:</b> HTML, CSS, Bootstrap, PHP, MySQL</li>
                     </ul>
                 </div>
             </div>
