--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <ul>
                         <li>PHP</li>
                         <li>Core Java</li>
-                        <li>JDBC</li>
+<!--                         <li>JDBC</li> -->
                         <li>Hiernate</li>
                     </ul>
                 </div>
