--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="card p-8">
             <h3 class="text-3xl font-bold text-gray-800 mb-2">PHP Developer</h3>
             <p class="text-xl text-gray-600 mb-2">Onkar E Learnings & Solutions LLP</p>
-            <p class="text-md text-gray-500 mb-4"><strong>Start :</strong> March 01 2025 <strong>Present</strong></p>
+            <p class="text-md text-gray-500 mb-4"><strong>Start :</strong> March 01 2025 &mdash; <strong>Present</strong></p>
             <p class="text-md text-gray-500 mb-4">0 - 1 Year Experience</p>
             <p class="text-lg text-gray-700 mb-4">
                 As a PHP Developer, I am responsible for developing and maintaining web applications using PHP and Laravel. My role involved:
