--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             I'm always open to new opportunities and collaborations. Feel free to reach out!
         </p>
         <div class="flex flex-col items-center space-y-4">
-            <a href="mailto:your.email@example.com" class="text-blue-700 hover:underline text-xl font-medium">adityabarve28@gmail.com/a>
+            <a href="mailto:your.email@example.com" class="text-blue-700 hover:underline text-xl font-medium">adityabarve28@gmail.com</a>
             <p class="text-gray-600 text-lg">
                 Connect with me on:
             </p>
