--- a/index.html
+++ b/index.html
@@ -61,9 +61,37 @@
     </style>
 </head>
 <body class="antialiased">
+   <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white bg-opacity-95 shadow-md py-4">
+        <div class="container px-6">
+            <a href="#home" class="navbar-brand text-2xl font-bold text-gray-800 font-playfair-display">Aditya Barve</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav space-x-6">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#experience">Experience</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- Navigation Bar -->
-    <nav class="fixed top-0 left-0 right-0 bg-white bg-opacity-95 shadow-md z-50 py-4">
+<!--     <nav class="fixed top-0 left-0 right-0 bg-white bg-opacity-95 shadow-md z-50 py-4">
         <div class="container mx-auto px-6 flex justify-between items-center">
             <a href="#home" class="text-2xl font-bold text-gray-800 font-playfair-display">Aditya Barve</a>
             <div class="space-x-6">
@@ -74,7 +102,7 @@
                 <a href="#contact" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Contact</a>
             </div>
         </div>
-    </nav>
+    </nav> -->
 
     <!-- Home Section -->
     <section id="home" class="min-h-screen flex items-center justify-center text-center pt-20 pb-10 bg-gradient-to-br from-amber-50 to-stone-100">
