--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya Barve - Portfolio</title>
+    <title>Aditya Barve - Web Developer Portfolio</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Bootstrap 5 CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Google Fonts - Inter (for body) and Playfair Display (for headings) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,10 +30,13 @@
             margin-bottom: 2rem;
             display: inline-block; /* To make the border only as wide as the text */
         }
-        .nav-link {
+        /* Custom nav-link styling to override Bootstrap defaults while maintaining hover */
+        .navbar-nav .nav-link {
+            color: #4A5568; /* Tailwind gray-600 equivalent */
             transition: color 0.3s ease;
+            font-family: 'Inter', sans-serif; /* Ensure Inter font for nav links */
         }
-        .nav-link:hover {
+        .navbar-nav .nav-link:hover {
             color: #4A90E2; /* Muted Blue accent for hover */
         }
         .btn-primary {
@@ -61,7 +66,8 @@
     </style>
 </head>
 <body class="antialiased">
-   <!-- Navigation Bar -->
+
+    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white bg-opacity-95 shadow-md py-4">
         <div class="container px-6">
             <a href="#home" class="navbar-brand text-2xl font-bold text-gray-800 font-playfair-display">Aditya Barve</a>
@@ -89,20 +95,6 @@
             </div>
         </div>
     </nav>
-
-    <!-- Navigation Bar -->
-<!--     <nav class="fixed top-0 left-0 right-0 bg-white bg-opacity-95 shadow-md z-50 py-4">
-        <div class="container mx-auto px-6 flex justify-between items-center">
-            <a href="#home" class="text-2xl font-bold text-gray-800 font-playfair-display">Aditya Barve</a>
-            <div class="space-x-6">
-                <a href="#about" class="nav-link text-gray-600 hover:text-gray-800 font-inter">About</a>
-                <a href="#skills" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Skills</a>
-                <a href="#experience" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Experience</a>
-                <a href="#projects" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Projects</a>
-                <a href="#contact" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Contact</a>
-            </div>
-        </div>
-    </nav> -->
 
     <!-- Home Section -->
     <section id="home" class="min-h-screen flex items-center justify-center text-center pt-20 pb-10 bg-gradient-to-br from-amber-50 to-stone-100">
@@ -188,7 +180,6 @@
             <h3 class="text-3xl font-bold text-gray-800 mb-2">PHP Developer</h3>
             <p class="text-xl text-gray-600 mb-2">Onkar E Learnings & Solutions LLP</p>
             <p class="text-md text-gray-500 mb-4"><strong>Start :</strong> March 01 2025 &mdash; <strong>Present</strong></p>
-            <p class="text-md text-gray-500 mb-4">0 - 1 Year Experience</p>
             <p class="text-lg text-gray-700 mb-4">
                 As a PHP Developer, I am responsible for developing and maintaining web applications using PHP and Laravel. My role involved:
             </p>
@@ -271,12 +262,11 @@
             I'm always open to new opportunities and collaborations. Feel free to reach out!
         </p>
         <div class="flex flex-col items-center space-y-4">
-            <a href="mailto:your.email@example.com" class="text-blue-700 hover:underline text-xl font-medium">adityabarve28@gmail.com</a>
+            <a href="mailto:adityabarve28@gmail.com" class="text-blue-700 hover:underline text-xl font-medium">adityabarve28@gmail.com</a>
             <p class="text-gray-600 text-lg">
                 Connect with me on:
             </p>
             <div class="flex space-x-6">
-                <!-- Replace with actual LinkedIn/GitHub URLs -->
                 <a href="https://linkedin.com/in/aditya-barve-fswd" target="_blank" class="text-blue-700 hover:text-blue-900 text-3xl">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                 </a>
@@ -295,5 +285,7 @@
         </div>
     </footer>
 
+    <!-- Bootstrap 5 JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
