--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         /* Custom nav-link styling to override Bootstrap defaults while maintaining hover */
         .navbar-nav .nav-link {
-            color: #4A5568; /* Tailwind gray-600 equivalent */
+            color: #4A5568 !important; /* Tailwind gray-600 equivalent */
             transition: color 0.3s ease;
             font-family: 'Inter', sans-serif; /* Ensure Inter font for nav links */
         }
