--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         /* Custom nav-link styling to override Bootstrap defaults while maintaining hover */
         .navbar-nav .nav-link {
-            color: #4A5568 !important; /* Tailwind gray-600 equivalent */
+            color: #4A5568; /* Tailwind gray-600 equivalent */
             transition: color 0.3s ease;
             font-family: 'Inter', sans-serif; /* Ensure Inter font for nav links */
         }
@@ -281,7 +281,7 @@
     <footer class="bg-gray-800 text-white py-8 text-center">
         <div class="container mx-auto px-6">
             <p>&copy; 2025 Aditya Barve. All rights reserved.</p>
-<!--             <p class="text-sm mt-2">Designed with <span class="text-red-500">&hearts;</span> and the spirit of classic journalism.</p> -->
+            <p class="text-sm mt-2">Designed with <span class="text-red-500">&hearts;</span> and the spirit of classic journalism.</p>
         </div>
     </footer>
 
