--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Aditya Barve - Web Developer Portfolio</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <!-- Bootstrap 5 CSS CDN -->
-<!--     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Google Fonts - Inter (for body) and Playfair Display (for headings) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,43 +67,34 @@
 </head>
 <body class="antialiased">
 
-  <!-- Navigation Bar -->
-<!-- Navigation Bar -->
-<!-- Navigation Bar -->
-<!-- <nav class="fixed top-0 left-0 w-full bg-white bg-opacity-95 shadow-md z-50" x-data="{ open: false }">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex items-center justify-between">
-    <a href="#home" class="text-2xl font-bold text-gray-800 font-playfair-display">Aditya Barve</a>
-    <button @click="open = !open" class="text-gray-800 lg:hidden focus:outline-none">
-      <svg x-show="!open" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
-           viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M4 6h16M4 12h16M4 18h16"/>
-      </svg>
-      <svg x-show="open" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
-           viewBox="0 0 24 24" stroke="currentColor" x-cloak>
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M6 18L18 6M6 6l12 12"/>
-      </svg>
-    </button>
-    <ul class="hidden lg:flex space-x-6 text-gray-700 font-medium">
-      <li><a class="hover:text-blue-500" href="#about">About</a></li>
-      <li><a class="hover:text-blue-500" href="#skills">Skills</a></li>
-      <li><a class="hover:text-blue-500" href="#experience">Experience</a></li>
-      <li><a class="hover:text-blue-500" href="#projects">Projects</a></li>
-      <li><a class="hover:text-blue-500" href="#contact">Contact</a></li>
-    </ul>
-  </div>
-  <div x-show="open" x-transition class="lg:hidden px-4 pb-4">
-    <ul class="space-y-2 text-gray-700 font-medium">
-      <li><a class="block hover:text-blue-500" href="#about" @click="open = false">About</a></li>
-      <li><a class="block hover:text-blue-500" href="#skills" @click="open = false">Skills</a></li>
-      <li><a class="block hover:text-blue-500" href="#experience" @click="open = false">Experience</a></li>
-      <li><a class="block hover:text-blue-500" href="#projects" @click="open = false">Projects</a></li>
-      <li><a class="block hover:text-blue-500" href="#contact" @click="open = false">Contact</a></li>
-    </ul>
-  </div>
-</nav> -->
-
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white bg-opacity-95 shadow-md py-4">
+        <div class="container px-6">
+            <a href="#home" class="navbar-brand text-2xl font-bold text-gray-800 font-playfair-display">Aditya Barve</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav space-x-6">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#experience">Experience</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!-- Home Section -->
     <section id="home" class="min-h-screen flex items-center justify-center text-center pt-20 pb-10 bg-gradient-to-br from-amber-50 to-stone-100">
@@ -291,7 +281,7 @@
     <footer class="bg-gray-800 text-white py-8 text-center">
         <div class="container mx-auto px-6">
             <p>&copy; 2025 Aditya Barve. All rights reserved.</p>
-<!--             <p class="text-sm mt-2">Designed with <span class="text-red-500">&hearts;</span> and the spirit of classic journalism.</p> -->
+            <p class="text-sm mt-2">Designed with <span class="text-red-500">&hearts;</span> and the spirit of classic journalism.</p>
         </div>
     </footer>
 
