--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Aditya Barve - Web Developer Portfolio</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Bootstrap 5 CSS CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Google Fonts - Inter (for body) and Playfair Display (for headings) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,13 +28,10 @@
             margin-bottom: 2rem;
             display: inline-block; /* To make the border only as wide as the text */
         }
-        /* Custom nav-link styling to override Bootstrap defaults while maintaining hover */
-        .navbar-nav .nav-link {
-            color: #4A5568; /* Tailwind gray-600 equivalent */
+        .nav-link {
             transition: color 0.3s ease;
-            font-family: 'Inter', sans-serif; /* Ensure Inter font for nav links */
         }
-        .navbar-nav .nav-link:hover {
+        .nav-link:hover {
             color: #4A90E2; /* Muted Blue accent for hover */
         }
         .btn-primary {
@@ -68,31 +63,30 @@
 <body class="antialiased">
 
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-white bg-opacity-95 shadow-md py-4">
-        <div class="container px-6">
-            <a href="#home" class="navbar-brand text-2xl font-bold text-gray-800 font-playfair-display">Aditya Barve</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav space-x-6">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#skills">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#experience">Experience</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
+    <nav class="fixed top-0 left-0 right-0 bg-white bg-opacity-95 shadow-md z-50 py-4">
+        <div class="container mx-auto px-6 flex justify-between items-center">
+            <a href="#home" class="text-2xl font-bold text-gray-800 font-playfair-display">Aditya Barve</a>
+            <div class="hidden md:flex space-x-6"> <!-- Hidden on small screens, flex on medium and up -->
+                <a href="#about" class="nav-link text-gray-600 hover:text-gray-800 font-inter">About</a>
+                <a href="#skills" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Skills</a>
+                <a href="#experience" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Experience</a>
+                <a href="#projects" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Projects</a>
+                <a href="#contact" class="nav-link text-gray-600 hover:text-gray-800 font-inter">Contact</a>
             </div>
+            <!-- Mobile Menu Button (Hamburger Icon) -->
+            <button class="md:hidden text-gray-600 hover:text-gray-800 focus:outline-none" onclick="document.getElementById('mobile-menu').classList.toggle('hidden')">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+                </svg>
+            </button>
+        </div>
+        <!-- Mobile Menu (Collapsible) -->
+        <div id="mobile-menu" class="hidden md:hidden bg-white py-2 shadow-md">
+            <a href="#about" class="block px-6 py-2 text-gray-600 hover:bg-gray-100 hover:text-gray-800 font-inter" onclick="document.getElementById('mobile-menu').classList.add('hidden')">About</a>
+            <a href="#skills" class="block px-6 py-2 text-gray-600 hover:bg-gray-100 hover:text-gray-800 font-inter" onclick="document.getElementById('mobile-menu').classList.add('hidden')">Skills</a>
+            <a href="#experience" class="block px-6 py-2 text-gray-600 hover:bg-gray-100 hover:text-gray-800 font-inter" onclick="document.getElementById('mobile-menu').classList.add('hidden')">Experience</a>
+            <a href="#projects" class="block px-6 py-2 text-gray-600 hover:bg-gray-100 hover:text-gray-800 font-inter" onclick="document.getElementById('mobile-menu').classList.add('hidden')">Projects</a>
+            <a href="#contact" class="block px-6 py-2 text-gray-600 hover:bg-gray-100 hover:text-gray-800 font-inter" onclick="document.getElementById('mobile-menu').classList.add('hidden')">Contact</a>
         </div>
     </nav>
 
@@ -285,7 +279,5 @@
         </div>
     </footer>
 
-    <!-- Bootstrap 5 JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
